--- a/strapi-app/package.json
+++ b/strapi-app/package.json
@@ -19,6 +19,7 @@
     "@strapi/plugin-users-permissions": "4.21.1",
     "@strapi/strapi": "4.21.1",
     "better-sqlite3": "8.6.0",
+    "esbuild": "^0.20.2",
     "pg": "^8.11.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
