--- a/strapi-app/docker/Dockerfile
+++ b/strapi-app/docker/Dockerfile
@@ -23,21 +23,21 @@ ARG DATABASE_CLIENT
 ARG DATABASE_HOST
 ARG DATABASE_PORT
 ARG DATABASE_NAME
-ARG DATABASE_USER
 ARG DATABASE_PASSWORD
-ARG DATABASE_SCHEMA
 ARG DATABASE_SSL
 ARG DATABASE_SSL_REJECT_UNAUTHORIZED
-ARG DATABASE_USERNAME
+ARG DATABASE_USER
 
 
 RUN touch .env
+RUN echo "HOST=${HOST}" >> .env
+RUN echo "PORT=${PORT}" >> .env
 RUN echo "APP_KEYS=${APP_KEYS}" >> .env
 RUN echo "API_TOKEN_SALT=${API_TOKEN_SALT}" >> .env
 RUN echo "ADMIN_JWT_SECRET=${ADMIN_JWT_SECRET}" >> .env
 RUN echo "TRANSFER_TOKEN_SALT=${TRANSFER_TOKEN_SALT}" >> .env
 RUN echo "DATABASE_CLIENT=${DATABASE_CLIENT}" >> .env
-RUN echo "DATABASE_USERNAME=${DATABASE_USERNAME}" >> .env
+RUN echo "DATABASE_USER=${DATABASE_USER}" >> .env
 RUN echo "JWT_SECRET=${JWT_SECRET}" >> .env
 RUN echo "NODE_ENV=${NODE_ENV}" >> .env
 RUN echo "PORT=${PORT}" >> .env
@@ -47,12 +47,11 @@ RUN echo "DATABASE_PASSWORD=${DATABASE_PASSWORD}" >> .env
 RUN echo "DATABASE_PORT=${DATABASE_PORT}" >> .env
 RUN echo "DATABASE_SSL=${DATABASE_SSL}" >> .env
 RUN echo "DATABASE_SCHEMA=${DATABASE_SCHEMA}" >> .env
-RUN echo "DATABASE_USER=${DATABASE_USER}" >> .env
 RUN echo "DATABASE_SSL_REJECT_UNAUTHORIZED=${DATABASE_SSL_REJECT_UNAUTHORIZED}" >> .env
 
 COPY . .
 RUN chown -R node:node /opt/app
 USER node
 RUN ["yarn", "build"]
-EXPOSE 8080
-CMD ["yarn", "start"]
+EXPOSE 1337
+CMD ["yarn", "dev"]
