--- a/strapi-app/docker/docker-compose.yml
+++ b/strapi-app/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   postgres:
@@ -10,23 +10,39 @@ services:
     volumes:
       - strapi_db:/var/lib/postgresql/data
     ports:
-      - '5432:5432'
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U strapi"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   strapi:
     build:
       context: ../
       dockerfile: docker/Dockerfile
       args:
-        DATABASE_CLIENT: postgres
-        DATABASE_NAME: strapi
-        DATABASE_HOST: postgres
-        DATABASE_PORT: 5432
-        DATABASE_USERNAME: strapi
-        DATABASE_PASSWORD: strapi
+        HOST: ${HOST}
+        PORT: ${PORT}
+        APP_KEYS: ${APP_KEYS}
+        API_TOKEN_SALT: ${API_TOKEN_SALT}
+        ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
+        JWT_SECRET: ${JWT_SECRET}
+        TRANSFER_TOKEN_SALT: ${TRANSFER_TOKEN_SALT}
+        DATABASE_CLIENT: ${DATABASE_CLIENT}
+        DATABASE_HOST: ${DATABASE_HOST}
+        DATABASE_NAME: ${DATABASE_NAME}
+        DATABASE_PORT: ${DATABASE_PORT}
+        DATABASE_USER: ${DATABASE_USER}
+        DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+        DATABASE_SSL: ${DATABASE_SSL}
+        DATABASE_SSL_REJECT_UNAUTHORIZED: ${DATABASE_SSL_REJECT_UNAUTHORIZED}
+
     ports:
-      - '1337:1337'
+      - "1337:1337"
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     volumes:
       - strapi:/app
 
